// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HeroSkeleton Component Responsive Behavior maintains structure with photo 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9F7F3",
      "borderRadius": 20,
      "marginBottom": 24,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#D1BBA330",
        "height": 220,
      }
    }
  >
    <Shimmer
      borderRadius={0}
      height={220}
      width="100%"
    />
  </View>
  <View
    style={
      {
        "paddingHorizontal": 20,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={32}
        width="60%"
      />
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={18}
        width="75%"
      />
    </View>
    <View
      style={
        {
          "marginBottom": 16,
          "marginTop": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={16}
        style={
          {
            "marginBottom": 8,
          }
        }
        width="100%"
      />
      <Shimmer
        borderRadius={10}
        height={16}
        style={
          {
            "marginBottom": 8,
          }
        }
        width="90%"
      />
      <Shimmer
        borderRadius={10}
        height={16}
        width="70%"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 10,
          "marginTop": 16,
        }
      }
    >
      <Shimmer
        borderRadius={12}
        height={64}
        style={
          {
            "flex": 1,
            "maxWidth": 120,
          }
        }
        width={100}
      />
      <Shimmer
        borderRadius={12}
        height={64}
        style={
          {
            "flex": 1,
            "maxWidth": 120,
          }
        }
        width={100}
      />
      <Shimmer
        borderRadius={12}
        height={64}
        width={100}
      />
    </View>
  </View>
</View>
`;

exports[`HeroSkeleton Component Responsive Behavior maintains structure without photo 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9F7F3",
      "borderRadius": 20,
      "marginBottom": 24,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 20,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={32}
        width="60%"
      />
      <View
        style={
          {
            "marginLeft": 12,
          }
        }
      >
        <Shimmer
          borderRadius={20}
          height={40}
          width={40}
        />
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={18}
        width="75%"
      />
    </View>
    <View
      style={
        {
          "marginBottom": 16,
          "marginTop": 12,
        }
      }
    >
      <Shimmer
        borderRadius={10}
        height={16}
        style={
          {
            "marginBottom": 8,
          }
        }
        width="100%"
      />
      <Shimmer
        borderRadius={10}
        height={16}
        style={
          {
            "marginBottom": 8,
          }
        }
        width="90%"
      />
      <Shimmer
        borderRadius={10}
        height={16}
        width="70%"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 10,
          "marginTop": 16,
        }
      }
    >
      <Shimmer
        borderRadius={12}
        height={64}
        style={
          {
            "flex": 1,
            "maxWidth": 120,
          }
        }
        width={100}
      />
      <Shimmer
        borderRadius={12}
        height={64}
        style={
          {
            "flex": 1,
            "maxWidth": 120,
          }
        }
        width={100}
      />
      <Shimmer
        borderRadius={12}
        height={64}
        width={100}
      />
    </View>
  </View>
</View>
`;
